# folax

./: .gitignore  License.txt  README.md  fourier_control_dict_N_10.pkl  main.py  pyproject.toml  requirement.txt  requirements_old.txt  setup.cfg  setup.py  test_mechanical.py  test_mechanical_2D.py  test_mechanical_3D.py  test_thermal.py  test_thermal_2D.py  test_thermal_3D.py  usefull_functions.py
IO/: __init__.py  mesh_io.py
computational_models/: __init__.py  fe_model.py  model.py
controls/: __init__.py  control.py  fourier_control.py
deep_neural_networks/: __init__.py  deep_network.py  fe_operator_learning.py
examples/: examples_runner.py  flax_nnx_UNet.py  flax_nnx_UNet_UPDATED.py  flax_nnx_modules.py  flax_requirements_pip.txt  pytorch_requirements_pip.txt  test_flax_UNet.py  test_pytorch_UNet.py
gui/: README.md  folax-streamlit.py  identity_control.py  meta_alpha_implicit_pr_lr_mechanical_2D_identity_control.py
loss_functions/: __init__.py  fe_loss.py  loss.py  mechanical_2D_fe.py  mechanical_3D_fe.py  mechanical_3D_fe_tetra.py  mechanical_fe.py  thermal_2D_fe.py  thermal_3D_fe.py  thermal_3D_fe_tetra.py  thermal_fe.py
mechanical_2D_N_10/: K_matrix.txt
plotter/: 2D_plot_and_U_diff_Part_2.py  3D_Cube_Meshed_Part_1.py  warp3d.py
solvers/: __init__.py  fe_solver.py  nonlinear_solver.py  residual_based_solver.py  solver.py
tested_samples/: Box_3D_Tetra_20.vtk
tests/: FOL_3D.hdf  conftest.py  fourier_control_dict_Nx_20_Ny_20_Nz_20.pkl  fourier_control_dict_Nx_50_Ny_50_Nz_50.pkl  mechanical_3D.py  mechanical_3D_bayesian_opt.py  test_mechanical_2D.py  (+5 more)
(+667 files in other folders)
