[project]
name = 'folax'
version = '0.0.1'
requires-python = ">=3.10"
authors = [
  {name = 'Reza Najian Asl, email = <reza.najian-asl@tum.de>'}
]
description = "A numerical framework that unifies established numerical methods with advanced scientific machine learning techniques for solving and optimizing parametrized PDEs."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Numerical-Simulation-Optimization", "PDE-Solver", "Scientific Machine Learning (SciML)", "Physics-Informed-Neural-Networks (PINNs)"]

dependencies = [
    'jax~=0.6.2',
    'flax~=0.10.7',
    'optax',   
    'meshio',
    'gmsh',
    'matplotlib',
    'tqdm',
    'numpy',
    'scipy',
    'h5py',
    'zarr',
    'dask' 
]

[project.optional-dependencies]
cuda = [
  'jax[cuda12]~=0.6.2'
]
dev = [
  'pytest',
  'pytest-cov'
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  'folax'
]
